# dbt-graphrag-kyc-agents

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  STAR_Interview_Prep.md  docker-compose.test.yml  docker-compose.yml  interview_preparation.md  pyproject.toml
.github/workflows/: ci.yml
.kiro/hooks/: architecture-guard.kiro.hook  python-lint-format.kiro.hook
.kiro/specs/hexagonal-graphrag-kyc-pipeline/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md  testing.md
dbt_kyc/: dbt_project.yml  profiles.yml
dbt_kyc/models/marts/: edges_shares_address.sql  edges_shares_ip.sql  edges_shares_phone.sql  nodes_address.sql  nodes_customer.sql  nodes_ip.sql  nodes_phone.sql  schema.yml
dbt_kyc/models/staging/: schema.yml  stg_customers.sql
dbt_kyc/seeds/: raw_customers.csv
src/: __init__.py
src/agents/: __init__.py  graph_analyst_agent.py  identity_verifier_agent.py  report_drafter_agent.py  sanctions_analyst_agent.py
src/api/: __init__.py  main.py
src/api/middleware/: __init__.py  security.py
src/api/routes/: __init__.py  kyc.py
src/application/: __init__.py  container.py  orchestrator.py
src/domain/: __init__.py  exceptions.py
src/domain/graph_analysis/: __init__.py  graph_service.py
src/domain/identity/: __init__.py  identity_service.py
src/domain/orchestration/: __init__.py  decision_engine.py
src/infrastructure/: __init__.py
terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
terraform/environments/: dev.tfvars
tests/: __init__.py
tests/architecture/: __init__.py  test_boundaries.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/property/: strategies.py  test_decision_properties.py
tests/quality/: __init__.py  test_coding_standards.py
tests/retrieval/: __init__.py
tests/security/: __init__.py  test_guardrails.py
tests/unit/: __init__.py  test_adapters.py  test_decision_engine.py  test_exceptions.py  test_llm_adapters.py  test_resilience.py
(+47 files in other folders)
