[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "dbt-graphrag-kyc-agents"
version = "0.1.0"
description = "Autonomous Multi-Agent KYC Investigation and Fraud Network Pipeline using Hexagonal Architecture, GraphRAG, and LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "langgraph>=0.2,<1.0",
    "strands-agents>=0.1,<1.0",
    "neo4j>=5.20,<6.0",
    "duckdb>=1.0,<2.0",
    "dbt-core>=1.8,<2.0",
    "dbt-duckdb>=1.8,<2.0",
    "structlog>=24.1,<25.0",
    "prometheus-client>=0.20,<1.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "httpx>=0.27,<1.0",
    "boto3>=1.34,<2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "pytest-asyncio>=0.23,<1.0",
    "hypothesis>=6.100,<7.0",
    "pytest-archon>=0.0.6,<1.0",
    "pytest-mock>=3.14,<4.0",
    "ruff>=0.5,<1.0",
    "mypy>=1.10,<2.0",
    "docker>=7.1,<8.0",
    "testcontainers>=4.4,<5.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "D", "UP", "ANN", "S", "B", "A", "COM", "C4",
    "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI",
    "PT", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "ARG", "PTH", "ERA", "PL",
    "TRY", "FLY", "PERF", "RUF",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_any_generics = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
